style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  width: 95vw;
  height: 95vh;
}
.cell {
  height: 25px;
  border: 1px solid #ccc;
}

.cell[contenteditable="true"] {
  outline: none;
}

.selected {
  border: 2px solid #089949;
}

.fixed 
{
  position: fixed;
}

.grid {
  display: grid;
  grid-template-columns: repeat(27, 105px);
}

.cell:focus {
  outline: none;
  border: 2px solid #089949 !important;
}

